--- a/index.html
+++ b/index.html
@@ -10,65 +10,53 @@
 <body>
     <div class="container">
         <div class="profile">
-            <img src="assests/profile.png" alt="">
+            <img src="profile.png" alt="">
             <h3>Ishika Datta</h3>
             <p>Passionate web and app developer.</p>
         </div>
         <div class="links-list">
-            <a href="https://www.linkedin.com/in/jigar-sable/" target="_blank">
+            <a href="https://www.linkedin.com/in/ishika-datta-19aa6a250/" target="_blank">
             <div class="link">
-                <img src="assests/linkedin.svg">
+                <img src="linkedin.svg">
                 <p>LinkedIn Profile</p>
             </div></a>
 
-            <a href="#" target="_blank">
+            <a href="https://ishikaxdatta.github.io/Personal-Portfolio-Website3/" target="_blank">
             <div class="link">
-                <img src="assests/user.svg" alt="">
+                <img src="user.svg" alt="">
                 <p>Personal Portfolio</p>
             </div></a>
 
-            <a href="https://github.com/jigar-sable" target="_blank">
+            <a href="https://github.com/IshikaXDatta" target="_blank">
             <div class="link">
-                <img src="assests/github.svg" alt="">
+                <img src="github.svg" alt="">
                 <p>GitHub Profile</p>
             </div></a>
 
-            <a href="#" target="_blank">
+            <a href="https://www.facebook.com/profile.php?id=100085100576307" target="_blank">
             <div class="link">
-                <img src="assests/facebook.svg" alt="">
+                <img src="facebook.svg" alt="">
                 <p>Facebook Profile</p>
             </div></a>
 
-            <a href="#" target="_blank">
+            <a href="https://www.instagram.com/its_elexis/" target="_blank">
             <div class="link">
-                <img src="assests/instagram.svg" alt="">
+                <img src="instagram.svg" alt="">
                 <p>Instagram Profile</p>
             </div></a>
 
-            <a href="#" target="_blank">
+            <a href="https://www.youtube.com/" target="_blank">
             <div class="link">
-                <img src="assests/youtube.svg" alt="">
+                <img src="youtube.svg" alt="">
                 <p>Youtube Channel</p>
             </div></a>
 
-            <a href="https://twitter.com/jigar_sab" target="_blank">
-                <div class="link">
-                    <img src="assests/facebook.svg" alt="">
-                    <p>Twitter Account</p>
-                </div></a>
-
-            <a href="https://www.startup.ind.in/" target="_blank">
-            <div class="link">
-                <img src="assests/blog.svg" alt="">
-                <p>My Blogs</p>
-            </div></a>
         </div>
         <div class="contact">
-            <img src="assests/facebook.svg" alt="">
-            <img src="assests/instagram.svg" alt="">
-            <img src="assests/linkedin.svg" alt="">
-            <img src="assests/youtube.svg" alt="">
-            <img src="assests/facebook.svg" alt="">
+            <img src="facebook.svg" alt="">
+            <img src="instagram.svg" alt="">
+            <img src="linkedin.svg" alt="">
+            <img src="youtube.svg" alt="">
         </div>
         <footer>
             <p>Ishika Datta 2024</p>
