--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="profile">
-            <img src="profile.png" alt="">
+            <img src="profile.jpeg" alt="">
             <h3>Ishika Datta</h3>
             <p>Passionate web and app developer.</p>
         </div>
